--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
   <title>Push Ups</title>
 </head>
 <body>
-  <div id="container">
-    <button id="start-new-day">Start New Day</button>
-    <div class="day">
-      
+  <div class="container">
+    <button id="new-day-btn">Start New Day</button>
+    <div class="day-grid">
     </div>
   </div>
 
-  <!-- Modal -->
+
   <div class="modal-container" id="modal">
     <div class="modal">
       <button class="close-btn" id="close">
@@ -34,6 +33,9 @@
       </div>
     </div>
   </div>
+
   <script src="app.js"></script>
 </body>
 </html>
+
+
