--- a/index.html
+++ b/index.html
@@ -26,11 +26,14 @@
         <button id="new-set-btn">Start New Set</button>
       </div>
     </div>
-    <a href="#day-grid-section"><button id="history-btn">View History</button></a>
+    <div id="icon-container">
+      <a id="history-btn" href="#day-grid-section"><i class="fas fa-arrow-down fa-3x"></i></a>
+    </div>
   </div>
+
   <section id="day-grid-section">
-  <div id="day-grid"></div>
-</section>
+    <div id="day-grid"></div>
+  </section>
 
   <!-- Modal -->
   <div class="modal-container" id="modal">
